--- a/weeder.toml
+++ b/weeder.toml
@@ -41,7 +41,7 @@ roots = [ # may of the entries here are about general-purpose module
          "^Galley.Cassandra.FeatureTH.generateSOPInstances$",
          "^Galley.Cassandra.FeatureTH.generateTupleP$",
          "^Galley.Types.Teams.canSeePermsOf", # TODO: figure out why weeder is confused by let bindings with curried infix notation
-         "^Galley.Types.UserList.ulDiff$",
+         "^Wire.UserList.ulDiff$",
          "^Gundeck.Monad.runGundeck$",
          "^Gundeck.run$",
          "^HTTP2.Client.Manager.*$",
