fix: add migration

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -265,6 +265,7 @@ library
     Galley.Schema.V96_GroupConversationType
     Galley.Schema.V97_CellsConversation
     Galley.Schema.V98_ChannelAddPermission
+    Galley.Schema.V99_ConversationAddParent
     Galley.TeamSubsystem
     Galley.Types.Clients
     Galley.Validation
