helm templating and config option docs

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -191,5 +191,9 @@ data:
         consumableNotifications:
           {{- toYaml .settings.featureFlags.consumableNotifications | nindent 10 }}
         {{- end }}
+        {{- if .settings.featureFlags.chatBubbles }}
+        chatBubbles:
+          {{- toYaml .settings.featureFlags.chatBubbles | nindent 10 }}
+        {{- end }}
       {{- end }}
   {{- end }}
