--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -217,7 +217,7 @@ config:
       chatBubbles:
         defaults:
           status: disabled
-          lockStatus: unlocked
+          lockStatus: locked
 
   aws:
     region: "eu-west-1"
