--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -214,6 +214,10 @@ config:
         defaults:
           status: disabled
           lockStatus: locked
+      chatBubbles:
+        defaults:
+          status: disabled
+          lockStatus: locked
 
   aws:
     region: "eu-west-1"
