--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -165,6 +165,10 @@ settings:
       defaults:
         status: disabled
         lockStatus: locked
+    chatBubbles:
+      defaults:
+        status: disabled
+        lockStatus: locked
 
 logLevel: Warn
 logNetStrings: false
