--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -169,6 +169,10 @@ settings:
       defaults:
         status: disabled
         lockStatus: locked
+    apps:
+      defaults:
+        status: disabled
+        lockStatus: locked
 
 logLevel: Warn
 logNetStrings: false
