--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -245,7 +245,7 @@ library
     , cql
     , cql-io
     , criterion
-    , cryptobox-haskell
+    , proteus-bindings
     , crypton
     , crypton-x509
     , cryptostore
