[to-be-reverted] only run a single test

--- a/charts/integration/templates/integration-integration.yaml
+++ b/charts/integration/templates/integration-integration.yaml
@@ -376,3 +376,6 @@ spec:
       value: "1"
     - name: ENABLE_FEDERATION_V2
       value: "1"
+    # TODO(leif): remove
+    - name: TEST_INCLUDE
+      value: "UserGroup"
