charts/gundeck: add prestop hook
We currently get a few 500s sometime when gundeck restarts, where some
current requests seem to get aborted mid-request. This is possibly due
to terminating pods still getting some traffic.

https://wearezeta.atlassian.net/browse/WPB-19694

--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -14,6 +14,9 @@ resources:
     cpu: "100m"
   limits:
     memory: "1Gi"
+
+# Should be greater than Warp's graceful shutdown (default 30s).
+terminationGracePeriodSeconds: 40
 config:
   logLevel: Info
   logFormat: StructuredJSON
