--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -128,6 +128,7 @@ common common-all
     , profunctors
     , prometheus-client
     , QuickCheck
+    , raw-strings-qq
     , resource-pool
     , resourcet
     , retry
@@ -181,6 +182,11 @@ library
     Wire.BlockListStore.Cassandra
     Wire.BrigAPIAccess
     Wire.BrigAPIAccess.Rpc
+    Wire.ConversationStore
+    Wire.ConversationStore.Cassandra
+    Wire.ConversationStore.Cassandra.Instances
+    Wire.ConversationStore.Cassandra.Queries
+    Wire.ConversationStore.MLS.Types
     Wire.DeleteQueue
     Wire.DeleteQueue.InMemory
     Wire.DomainRegistrationStore
@@ -219,6 +225,10 @@ library
     Wire.InternalEvent
     Wire.InvitationStore
     Wire.InvitationStore.Cassandra
+    Wire.ListItems
+    Wire.ListItems.ConversationIds.Cassandra
+    Wire.MemberStore
+    Wire.MemberStore.Cassandra
     Wire.NotificationSubsystem
     Wire.NotificationSubsystem.Interpreter
     Wire.ParseException
@@ -240,6 +250,8 @@ library
     Wire.SparAPIAccess.Rpc
     Wire.StoredConversation
     Wire.StoredUser
+    Wire.SubConversationStore
+    Wire.SubConversationStore.Cassandra
     Wire.TeamCollaboratorsStore
     Wire.TeamCollaboratorsStore.Postgres
     Wire.TeamCollaboratorsSubsystem
@@ -268,6 +280,7 @@ library
     Wire.UserSubsystem.HandleBlacklist
     Wire.UserSubsystem.Interpreter
     Wire.UserSubsystem.UserSubsystemConfig
+    Wire.Util
     Wire.VerificationCode
     Wire.VerificationCodeGen
     Wire.VerificationCodeStore
