Allow fallback when querying cachix
Some dependencies don't work. E.g.

error: unable to download
'https://wire-server.cachix.org/nar/efd7da48cfc88cd2bc30eae66a648c497f27b7132d248d8964b12cb61f603820.nar.zst':
HTTP error 500

       response body:

       Tried serving NAR from storage and hit maximum retries limit.

error: some substitutes for the outputs of derivation
'/nix/store/vb93g275dqnsjfbx0z1l9daxrc3ngwdb-ff-0.13.0.tar.gz.drv'
failed (usually happens due to networking issues); try '--fallback' to
build derivation from source

--- a/.envrc
+++ b/.envrc
@@ -27,7 +27,7 @@ if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(<
     fi
   fi
   echo "🔧 Building environment"
-  $bcmd build -f nix wireServer.devEnv -Lv --out-link ./.env
+  $bcmd build -f nix wireServer.devEnv -Lv --out-link ./.env --fallback
   echo "$store_paths" >"$layout_dir/nix-rebuild"
 fi
 
