--- a/deploy/dockerephemeral/docker-compose.yaml
+++ b/deploy/dockerephemeral/docker-compose.yaml
@@ -324,12 +324,29 @@ services:
       - RABBITMQ_USERNAME
       - RABBITMQ_PASSWORD
     ports:
-      - "127.0.0.1:5671:5671"
-      - "127.0.0.1:15671:15671"
-      - "127.0.0.1:15672:15672"
+      # Shift real RabbitMQ off standard ports; Toxiproxy will listen on them
+      - "127.0.0.1:5673:5671"
+      - "127.0.0.1:15674:15671"
+      - "127.0.0.1:15673:15672"
     volumes:
       - ./rabbitmq-config/rabbitmq.conf:/etc/rabbitmq/conf.d/20-wire.conf
       - ./rabbitmq-config/certificates:/etc/rabbitmq/certificates
+    networks:
+      - demo_wire
+
+  toxiproxy:
+    container_name: toxiproxy
+    image: shopify/toxiproxy
+    command: -host=0.0.0.0 -config /config/toxiproxy.json
+    depends_on:
+      - rabbitmq
+    ports:
+      - "127.0.0.1:8474:8474"   # Toxiproxy admin API
+      - "127.0.0.1:5671:5671"   # RabbitMQ AMQP (TLS) via proxy
+      - "127.0.0.1:15672:15672" # RabbitMQ management via proxy
+      - "127.0.0.1:15671:15671" # RabbitMQ management (TLS) via proxy
+    volumes:
+      - ./docker/toxiproxy.json:/config/toxiproxy.json:ro
     networks:
       - demo_wire
 
