Add app creation endpoint

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -69,6 +69,7 @@ library
   -- cabal-fmt: expand src
   exposed-modules:
     Wire.API.Allowlists
+    Wire.API.App
     Wire.API.ApplyMods
     Wire.API.Asset
     Wire.API.Bot
