--- a/services/integration.yaml
+++ b/services/integration.yaml
@@ -166,11 +166,11 @@ dynamicBackends:
 
 rabbitmq:
   host: localhost
-  port: 5671
+  port: 5672
   adminHost: localhost
-  adminPort: 15671
-  enableTls: true
-  insecureSkipVerifyTls: true
+  adminPort: 15672
+  enableTls: false
+  # insecureSkipVerifyTls: true
   vHost: /
 
 rabbitmq-v0:
