--- a/deploy/dockerephemeral/haproxy.cfg
+++ b/deploy/dockerephemeral/haproxy.cfg
@@ -4,6 +4,7 @@ global
     stats timeout 30s
     user haproxy
     group haproxy
+    daemon
     tune.idletimer 30s
     tune.http.cookielen 4096
 
@@ -24,9 +25,9 @@ defaults
     timeout client 3600000ms
     timeout server 3600000ms
     timeout check 5000ms
-    
+
     option tcp-check
-    
+
 
 listen stats
     bind *:8080
@@ -42,7 +43,7 @@ frontend rabbitmq_amqp
     mode tcp
     option tcplog
     default_backend rabbitmq_amqp_cluster
-    
+
     timeout client 3600000ms
 
 frontend rabbitmq_amqps
@@ -50,7 +51,7 @@ frontend rabbitmq_amqps
     mode tcp
     option tcplog
     default_backend rabbitmq_amqps_cluster
-    
+
     timeout client 3600000ms
 
 frontend rabbitmq_management
@@ -58,39 +59,39 @@ frontend rabbitmq_management
     mode http
     option httplog
     default_backend rabbitmq_management_cluster
-    
+
     timeout client 3600000ms
- 
+
 frontend rabbitmq_management_tls
     bind *:15671
     mode tcp
     option tcplog
     default_backend rabbitmq_management_tls_cluster
-    
+
     timeout client 3600000ms
 
 backend rabbitmq_amqp_cluster
     mode tcp
     balance roundrobin
-    
+
     timeout server 3600000ms
     timeout check 3000ms
-    
+
     option tcp-check
     tcp-check connect
-    
+
     server rabbitmq rabbitmq:5672 check inter 10000ms fall 3 rise 2 resolvers docker resolve-prefer ipv4 init-addr last,libc,none
 
 backend rabbitmq_amqps_cluster
     mode tcp
     balance roundrobin
-    
+
     timeout server 3600000ms
     timeout check 3000ms
-    
+
     option tcp-check
     tcp-check connect
-    
+
     server rabbitmq-tls rabbitmq:5671 check inter 10000ms fall 3 rise 2 resolvers docker resolve-prefer ipv4 init-addr last,libc,none
 
 backend rabbitmq_management_cluster
@@ -101,19 +102,19 @@ backend rabbitmq_management_cluster
     http-check connect default
     http-check send meth GET uri /api/overview hdr Authorization "Basic YWRtaW46cGFzc3dvcmQ="
     http-check expect status 200
-    
+
     timeout server 3600000ms
-    
+
     server rabbitmq-mgmt rabbitmq:15672 check inter 10000ms fall 3 rise 2 resolvers docker resolve-prefer ipv4 init-addr last,libc,none
 
 backend rabbitmq_management_tls_cluster
     mode tcp
     balance roundrobin
-    
+
     timeout server 3600000ms
     timeout check 3000ms
-    
+
     option tcp-check
     tcp-check connect
-    
+
     server rabbitmq-mgmt-tls rabbitmq:15671 check inter 10000ms fall 3 rise 2 resolvers docker resolve-prefer ipv4 init-addr last,libc,none
