--- a/services/background-worker/background-worker.integration.yaml
+++ b/services/background-worker/background-worker.integration.yaml
@@ -16,13 +16,13 @@ cassandra:
 
 rabbitmq:
   host: 127.0.0.1
-  port: 5672
+  port: 5671
   vHost: /
   adminHost: 127.0.0.1
-  adminPort: 15672
-  enableTls: false
-  # caCert: test/resources/rabbitmq-ca.pem
-  # insecureSkipVerifyTls: false
+  adminPort: 15671
+  enableTls: true
+  caCert: test/resources/rabbitmq-ca.pem
+  insecureSkipVerifyTls: false
 
 backendNotificationPusher:
   pushBackoffMinWait: 1000 # 1ms
