Add hls.json to .gitignore
This file is used by my (Sven) editor setup. It's probably not of
general usefulness.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,6 @@ logs-integration
 
 # BOM file - https://github.com/wireapp/tom-bombadil
 sbom.json
+
+# HLS config for haskell-tools plugin (Neovim)
+hls.json
