Create apps table (#4696)
* Initial implementation of AppStore

* App subsystem

* Generate team event on app creation

* Add app creation endpoint

* Generate app cookie

* Basic app creation test

* Add app creation permission

* Add CHANGELOG entry

* Better logging

* Fix team event parsing

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -170,6 +170,10 @@ library
   exposed-modules:
     Wire.ActivationCodeStore
     Wire.ActivationCodeStore.Cassandra
+    Wire.AppStore
+    Wire.AppStore.Postgres
+    Wire.AppSubsystem
+    Wire.AppSubsystem.Interpreter
     Wire.AuthenticationSubsystem
     Wire.AuthenticationSubsystem.Config
     Wire.AuthenticationSubsystem.Cookie
@@ -234,6 +238,8 @@ library
     Wire.PasswordResetCodeStore.Cassandra
     Wire.PasswordStore
     Wire.PasswordStore.Cassandra
+    Wire.Postgres
+    Wire.PostgresMarshall
     Wire.PostgresMigrations
     Wire.PropertyStore
     Wire.PropertyStore.Cassandra
@@ -257,6 +263,7 @@ library
     Wire.TeamInvitationSubsystem.Interpreter
     Wire.TeamSubsystem
     Wire.TeamSubsystem.GalleyAPI
+    Wire.TeamSubsystem.Util
     Wire.UserGroupStore
     Wire.UserGroupStore.Postgres
     Wire.UserGroupSubsystem
