--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -545,6 +545,9 @@ nginx_conf:
     - path: /user-groups/([^/]*)/channels$
       envs:
         - all
+    - path: /user-groups/check-name
+      envs:
+        - all
     galley:
     - path: /conversations/code-check
       disable_zauth: true
