WPB-19807 User Group and Channel API stubs (#4743)

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -545,6 +545,12 @@ nginx_conf:
     - path: /user-groups/([^/]*)/users/([^/]*)
       envs:
         - all
+    - path: /user-groups/([^/]*)/channels$
+      envs:
+        - all
+    - path: /user-groups/check-name$
+      envs:
+        - all
     galley:
     - path: /conversations/code-check
       disable_zauth: true
@@ -704,6 +710,9 @@ nginx_conf:
       disable_zauth: true
       basic_auth: true
       versioned: false
+    - path: /search/channels$
+      envs:
+      - all
     gundeck:
     - path: /push
       envs:
