--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -43,6 +43,7 @@ library
     Spar.Schema.V19
     Spar.Schema.V2
     Spar.Schema.V20
+    Spar.Schema.V21
     Spar.Schema.V3
     Spar.Schema.V4
     Spar.Schema.V5
