--- a/services/nginz/integration-test/conf/nginz/nginx.conf
+++ b/services/nginz/integration-test/conf/nginz/nginx.conf
@@ -196,7 +196,7 @@ http {
         proxy_pass http://brig;
     }
 
-    location /register {
+    location ~* ^(/v[0-9]+)?/register {
       include common_response_no_zauth.conf;
       proxy_pass http://brig;
     }
