galley, wire-api, charts, docs, tests: add AssetAuditLog feature flag

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -187,6 +187,10 @@ data:
         allowedGlobalOperations:
           {{- toYaml .settings.featureFlags.allowedGlobalOperations | nindent 10 }}
         {{- end }}
+        {{- if .settings.featureFlags.assetAuditLog }}
+        assetAuditLog:
+          {{- toYaml .settings.featureFlags.assetAuditLog | nindent 10 }}
+        {{- end }}
         {{- if .settings.featureFlags.consumableNotifications }}
         consumableNotifications:
           {{- toYaml .settings.featureFlags.consumableNotifications | nindent 10 }}
