--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -161,6 +161,8 @@ settings:
       status: enabled
       config:
         mlsConversationReset: false
+    assetAuditLog:
+      status: disabled
     consumableNotifications:
       defaults:
         status: disabled
