--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -138,6 +138,7 @@ library
     Test.FeatureFlags.AllowedGlobalOperations
     Test.FeatureFlags.AppLock
     Test.FeatureFlags.Apps
+    Test.FeatureFlags.AssetAuditLog
     Test.FeatureFlags.Cells
     Test.FeatureFlags.Channels
     Test.FeatureFlags.ChatBubbles
