cargohold config option for audit logs

--- a/charts/cargohold/templates/configmap.yaml
+++ b/charts/cargohold/templates/configmap.yaml
@@ -55,6 +55,7 @@ data:
       {{- if .downloadLinkTTL }}
       downloadLinkTTL: {{ .downloadLinkTTL }}
       {{- end }}
+      assetAuditLogEnabled: {{ .assetAuditLogEnabled }}
       federationDomain: {{ .federationDomain }}
       disabledAPIVersions: {{ toJson .disabledAPIVersions }}
       {{- end }}
