store and read s3 audit metadata

--- a/services/cargohold/cargohold.cabal
+++ b/services/cargohold/cargohold.cabal
@@ -118,6 +118,7 @@ library
     , prometheus-client
     , resourcet              >=1.1
     , retry                  >=0.5
+    , schema-profunctor
     , servant
     , servant-client
     , servant-server
