Move group info check to a separate module

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -99,6 +99,7 @@ library
     Galley.API.MLS.Conversation
     Galley.API.MLS.Enabled
     Galley.API.MLS.GroupInfo
+    Galley.API.MLS.GroupInfoCheck
     Galley.API.MLS.IncomingMessage
     Galley.API.MLS.Keys
     Galley.API.MLS.Message
