--- a/services/cargohold/cargohold.cabal
+++ b/services/cargohold/cargohold.cabal
@@ -117,6 +117,7 @@ library
     , metrics-wai            >=0.4
     , mime                   >=0.4
     , prometheus-client
+    , QuickCheck             >=2.14
     , resourcet              >=1.1
     , retry                  >=0.5
     , schema-profunctor
@@ -296,5 +297,80 @@ executable cargohold-integration
     , wire-api
     , wire-api-federation
     , yaml                   >=0.8
+
+  default-language:   Haskell2010
+
+test-suite cargohold-tests
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
+  hs-source-dirs:     test/unit
+  other-modules:
+    Test.CargoHold.API.AuditLogTest
+    Test.CargoHold.API.LogJSON
+
+  default-extensions:
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    DuplicateRecordFields
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    NoImplicitPrelude
+    OverloadedRecordDot
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -Wredundant-constraints -Wunused-packages -Wno-x-partial
+
+  build-depends:
+      aeson             >=2.0.1.0
+    , base              >=4       && <5
+    , bytestring        >=0.10
+    , cargohold
+    , cargohold-types
+    , extended
+    , imports
+    , mime              >=0.4
+    , tasty             >=1.0
+    , tasty-quickcheck  >=0.10
+    , text              >=1.1
+    , types-common
+    , unix
+    , unliftio
+    , uri-bytestring    >=0.2
+    , wire-api
 
   default-language:   Haskell2010
