--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -187,3 +187,6 @@ journal: # if set, journals; if not set, disables journaling
   queueName: integration-team-events.fifo
   endpoint: http://localhost:4568 # https://sqs.eu-west-1.amazonaws.com
   region: eu-west-1
+
+postgresMigration:
+  conversation: postgresql
