Make test parameters configurable

--- a/services/integration.yaml
+++ b/services/integration.yaml
@@ -330,3 +330,7 @@ integrationTestHostName: "localhost"
 additionalElasticSearch: https://localhost:9201
 
 cellsEventQueue: cells_events
+
+shardingGroupCount: 1
+shardingGroup: 0
+maxUserNo: 1000
