Add params to Helm chart

--- a/charts/integration/templates/configmap.yaml
+++ b/charts/integration/templates/configmap.yaml
@@ -310,3 +310,6 @@ data:
 
     integrationTestHostName: integration-headless.{{ .Release.Namespace }}.svc.cluster.local
     cellsEventQueue: cells_events
+    shardingGroupCount: {{ .Values.config.shardingGroupCount }}
+    shardingGroup: {{ .Values.config.shardingGroup }}
+    maxUserNo: {{ .Values.config.maxUserNo }}
