--- a/charts/integration/values.yaml
+++ b/charts/integration/values.yaml
@@ -119,7 +119,9 @@ config:
   sesEndpointUrl: http://fake-aws-ses:4569
   s3EndpointUrl: http://fake-aws-s3:9000
   rabbitmqPutVHostUrl: http://rabbitmq:15672/api/vhosts
-
+  shardingGroupCount: 1
+  shardingGroup: 0
+  maxUserNo: 1000
 tls:
   verify_depth: 1
   # Namespace from which to obtain the secret containing the CA trusted by
