WPB-19716: Batch create Channels and Map them to User Groups

--- a/cabal.project
+++ b/cabal.project
@@ -60,6 +60,7 @@ packages:
   , tools/stern/
   , tools/mlsstats/
   , tools/test-stats/
+  , tools/entreprise-provisioning/
 
 tests: True
 benchmarks: True
