--- a/charts/integration/templates/configmap.yaml
+++ b/charts/integration/templates/configmap.yaml
@@ -77,14 +77,15 @@ data:
       apiPort: 5380
       dohPort: 5381
 
-    originDomain: federation-test-helper.{{ .Release.Namespace }}.svc.cluster.local
+    # originDomain: federation-test-helper.{{ .Release.Namespace }}.svc.cluster.local
+    originDomain: sven-test.wire.link
 
     rabbitmq:
       host: rabbitmq
       port: 5671
       adminHost: rabbitmq
-      adminPort: 15671
-      enableTls: true
+      adminPort: 15672
+      enableTls: false
       insecureSkipVerifyTls: true
       vHost: /
 
