Fix feature flag tests

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -153,6 +153,7 @@ config:
             allowedCipherSuites: [2]
             defaultCipherSuite: 2
             supportedProtocols: [proteus, mls] # must contain defaultProtocol
+            groupInfoDiagnostics: false
           lockStatus: unlocked
       searchVisibilityInbound:
         defaults:
@@ -210,6 +211,7 @@ config:
         status: enabled
         config:
           mlsConversationReset: false
+          mlsGroupInfoDiagnostics: false
       assetAuditLog:
         status: disabled
       consumableNotifications:
