--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -161,6 +161,7 @@ settings:
       status: enabled
       config:
         mlsConversationReset: false
+        mlsGroupInfoDiagnostics: false
     assetAuditLog:
       status: disabled
     consumableNotifications:
