--- a/charts/reaper/templates/deployment.yaml
+++ b/charts/reaper/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
               app: reaper
       containers:
         - name: reaper
-          image: bitnami/kubectl:1.32.2
+          image: bitnamilegacy/kubectl:1.32.2
           command: ["/app/reaper.sh", "{{ .Release.Namespace }}"]
           volumeMounts:
             - name: reaper-script
