--- a/charts/reaper/values.yaml
+++ b/charts/reaper/values.yaml
@@ -1,4 +1,7 @@
-
+image:
+  registry: registry.k8s.io
+  repository: kubectl
+  tag: 1.32.9
 podSecurityContext:
   allowPrivilegeEscalation: false
   capabilities:
