--- a/charts/redis-ephemeral/values.yaml
+++ b/charts/redis-ephemeral/values.yaml
@@ -1,5 +1,6 @@
 redis-ephemeral:
   image:
+    registry: bitnamilegacy/redis
     tag: 7.2.5
   # We use a single node redis for now.
   architecture: standalone
