--- a/charts/integration/templates/configmap.yaml
+++ b/charts/integration/templates/configmap.yaml
@@ -313,3 +313,4 @@ data:
     cellsEventQueue: cells_events
     shardingGroupCount: {{ .Values.config.shardingGroupCount }}
     maxUserNo: {{ .Values.config.maxUserNo }}
+    maxDeliveryDelay: {{ .Values.config.maxDeliveryDelay }}
