--- a/charts/integration/templates/integration-integration.yaml
+++ b/charts/integration/templates/integration-integration.yaml
@@ -101,12 +101,12 @@ spec:
     - name: RABBITMQ_USERNAME
       valueFrom:
         secretKeyRef:
-          name: brig
+          name: gundeck
           key: rabbitmqUsername
     - name: RABBITMQ_PASSWORD
       valueFrom:
         secretKeyRef:
-          name: brig
+          name: gundeck
           key: rabbitmqPassword
     command:
       - /bin/sh
@@ -158,7 +158,7 @@ spec:
     resources:
       requests:
         memory: "512Mi"
-        cpu: "2"
+        cpu: "0.5"
     volumeMounts:
 
     - name: integration-config
@@ -222,12 +222,12 @@ spec:
     - name: RABBITMQ_USERNAME
       valueFrom:
         secretKeyRef:
-          name: brig
+          name: gundeck
           key: rabbitmqUsername
     - name: RABBITMQ_PASSWORD
       valueFrom:
         secretKeyRef:
-          name: brig
+          name: gundeck
           key: rabbitmqPassword
     {{- if hasKey $.Values.secrets "redisUsername" }}
     - name: REDIS_USERNAME
