--- a/charts/restund/templates/statefulset.yaml
+++ b/charts/restund/templates/statefulset.yaml
@@ -56,7 +56,7 @@ spec:
 {{- end }}
       initContainers:
         - name: get-external-ip
-          image: bitnamilegacy/kubectl:1.24.12
+          image: registry.k8s.io/kubectl:1.24.12
           volumeMounts:
             - name: external-ip
               mountPath: /external-ip
