chore: align kubectl images with available tags reaper now uses registry.k8s.io/kubectl:v1.32.9 (with the registry’s required v prefix) restund falls back to docker.io/bitnamilegacy/kubectl:1.24.12 since registry.k8s.io no longer ships that version

--- a/charts/reaper/values.yaml
+++ b/charts/reaper/values.yaml
@@ -1,7 +1,7 @@
 image:
   registry: registry.k8s.io
   repository: kubectl
-  tag: 1.32.9
+  tag: v1.32.9
 podSecurityContext:
   allowPrivilegeEscalation: false
   capabilities:
