--- a/charts/restund/templates/statefulset.yaml
+++ b/charts/restund/templates/statefulset.yaml
@@ -56,7 +56,7 @@ spec:
 {{- end }}
       initContainers:
         - name: get-external-ip
-          image: bitnamilegacy/kubectl:1.24.12
+          image: {{ .Values.kubectlImage.registry }}/{{ .Values.kubectlImage.repository }}:{{ .Values.kubectlImage.tag }}
           volumeMounts:
             - name: external-ip
               mountPath: /external-ip
