--- a/services/nginz/integration-test/conf/nginz/common_response.conf
+++ b/services/nginz/integration-test/conf/nginz/common_response.conf
@@ -16,8 +16,9 @@
       proxy_set_header   Z-Timestamp    $zauth_timestamp;
       proxy_set_header   Request-Id     $request_id;
       # Forward client IP information to upstreams
-      proxy_set_header   X-Forwarded-For $xff_with_client;
-      proxy_set_header   X-Real-IP       $client_ip;
+      # NOTE: Leave X-Forwarded-For untouched; add full chain for tests
+      proxy_set_header   X-Wire-Forwarded-For $xff_with_client;
+      proxy_set_header   X-Real-IP            $client_ip;
 
       # NOTE: This should only be used on endpoints where credentials are needed
       more_set_headers 'Access-Control-Allow-Credentials: true';
