--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -228,6 +228,10 @@ config:
         defaults:
           status: enabled
           lockStatus: unlocked
+      stealthUsers:
+        defaults:
+          status: disabled
+          lockStatus: locked
   aws:
     region: "eu-west-1"
   proxy: {}
