--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -175,6 +175,10 @@ settings:
       defaults:
         status: disabled
         lockStatus: locked
+    stealthUsers:
+      defaults:
+        status: disabled
+        lockStatus: locked
 
 logLevel: Warn
 logNetStrings: false
