--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -160,6 +160,7 @@ library
     Test.FeatureFlags.SimplifiedUserConnectionRequestQRCode
     Test.FeatureFlags.SndFactorPasswordChallenge
     Test.FeatureFlags.SSO
+    Test.FeatureFlags.StealthUsers
     Test.FeatureFlags.User
     Test.FeatureFlags.Util
     Test.FeatureFlags.ValidateSAMLEmails
