--- a/services/nginz/integration-test/conf/nginz/nginx.conf
+++ b/services/nginz/integration-test/conf/nginz/nginx.conf
@@ -169,10 +169,7 @@ http {
         zauth off;
 
         # Forward client IP information to upstream federator
-        # NOTE: Do NOT override X-Forwarded-For in tests to mirror production behavior.
-        # Provide full chain via X-Wire-Forwarded-For and a single client IP via X-Real-IP.
-        proxy_set_header X-Wire-Forwarded-For $xff_with_client;
-        proxy_set_header X-Real-IP           $client_ip;
+        proxy_set_header X-Forwarded-For $xff_with_client;
 
         proxy_set_header "X-SSL-Certificate" $ssl_client_escaped_cert;
         proxy_pass http://federator_external;
