use bitnamilegacy kubectl which includes shell

--- a/charts/reaper/values.yaml
+++ b/charts/reaper/values.yaml
@@ -1,6 +1,7 @@
 image:
-  registry: registry.k8s.io
-  repository: kubectl
+  # Use a kubectl image that includes a shell (sh/bash). Distroless images will fail to exec the script.
+  registry: docker.io
+  repository: bitnamilegacy/kubectl
   tag: v1.32.9
 podSecurityContext:
   allowPrivilegeEscalation: false
